# deep_causality

./: .bazelignore  .bazelrc  .clippy.toml  .gitignore  .phylum_project  .roomodes  AGENTS.md  Ai-Coding-Assistants.md  BUILD.bazel  BUILD.md  Bazel.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GEMINI.md  LICENSE  MAINTAINERS.md  MODULE.bazel  NEWS.md  README.md  README_DEEP_DIVE.md  README_INTRO.md  RELEASE-NOTES.md  RELEASE.md  SECURITY.md  SKILLS.md  SUPPORT.md  WHAT_IS_DCO.md  cylinder_wake.csv  makefile  release-plz.toml  skills-lock.json
alias/: BUILD.bazel
dcl_data_structures/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  README_ArrayGrid.md  README_RingBuffer.md  README_SlidingWindow.md  Readme.md
dcl_data_structures/benches/: bench_dcl_data_structures.rs  bench_main.rs
dcl_data_structures/docs/: ArrayGrid.md  SlidingWindow.md
dcl_data_structures/examples/: array_grid.rs  ring_buffer_multi_producer_multi_consumer.rs  ring_buffer_multi_producer_single_consumer.rs  ring_buffer_single_producer_multi_consumer.rs  ring_buffer_single_producer_single_consumer.rs  sliding_window.rs
dcl_data_structures/src/: lib.rs  prelude.rs
dcl_data_structures/tests/: BUILD.bazel  grid_array_tests.rs  mod.rs  window_array_backed_tests.rs  window_vector_backed_tests.rs
dcl_hyper_graph/: Cargo.toml  LICENSE  README.md
dcl_hyper_graph/src/: error.rs  graph.rs  graph_like.rs  lib.rs  storage.rs  storage_matrix.rs  ultra_graph.rs
deep_causality/: BUILD.bazel  CHANGELOG.md  Cargo.toml  LEAN_DeepCausality.md  README.md  deep_causality_sbom.spdx.json  deep_causality_sbom.spdx.json.sha  examples.txt  sbom.spdx  sbom.spdx.json  sbom.spdx.json.sha
deep_causality/benches/: bench_main.rs
deep_causality/docs/: README.md  causal_state_machine.md  causal_structure.md  concepts.md  context.md  customizing_context.md  difference.md  heilmeier_questions.md  limitations.md  motivation.md
deep_causality/specs/: specs_unified_reasoning.md
deep_causality/src/: lib.rs  prelude.rs
deep_causality/tests/: BUILD.bazel  assumable_collection_tests.rs  assumable_map_tests.rs  assumption_tests.rs  causable_arr_tests.rs  causable_map_tests.rs  causality_array_tests.rs  causality_collection_tests.rs  causality_graph_reasoning_tests.rs  causality_graph_tests.rs  causality_map_tests.rs  causaloid_tests.rs  csm_action_tests.rs  csm_state_tests.rs  csm_tests.rs  error_tests.rs  grid_array_tests.rs  inferable_collection_tests.rs  inferable_vec_tests.rs  inference_tests.rs  mod.rs  observable_arr_tests.rs  observable_collection_tests.rs  observation_tests.rs  window_array_backed_tests.rs  window_vector_backed_tests.rs
deep_causality_algebra/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  README_ALGEBRA_TRAITS.md  README_ISOMORPHISM.md  deep_causality_algebra_sbom.spdx.json  deep_causality_algebra_sbom.spdx.json.sha
deep_causality_algebra/src/: lib.rs
deep_causality_algebra/tests/: BUILD.bazel  mod.rs
deep_causality_algorithms/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_algorithms_sbom.spdx.json  deep_causality_algorithms_sbom.spdx.json.sha  examples.txt  sbom.spdx  sbom.spdx.json  sbom.spdx.json.sha
deep_causality_algorithms/benches/: brcd_benchmark.rs  brcd_benchmark_wide.rs  mrmr_benchmark.rs
deep_causality_algorithms/docs/: notes.md
deep_causality_algorithms/examples/: README.md  example_mrmr.rs  example_mrmr_cdl.rs  example_surd.rs
deep_causality_algorithms/src/: lib.rs
deep_causality_algorithms/tests/: BUILD.bazel  mod.rs
deep_causality_ast/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_ast_sbom.spdx.json  deep_causality_ast_sbom.spdx.json.sha  sbom.spdx.json  sbom.spdx.json.sha
deep_causality_ast/src/: lib.rs
deep_causality_ast/tests/: BUILD.bazel  const_tree_tests.rs  mod.rs
deep_causality_calculus/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_calculus_sbom.spdx.json  deep_causality_calculus_sbom.spdx.json.sha
deep_causality_calculus/src/: lib.rs
deep_causality_calculus/tests/: BUILD.bazel  mod.rs
deep_causality_cfd/: BUILD.bazel  Cargo.toml  README.md  deep_causality_cfd_sbom.spdx.json  deep_causality_cfd_sbom.spdx.json.sha  examples.txt
deep_causality_cfd/benches/: PERFORMANCE.md  bench_dec_ns_march.rs  bench_mms_verify.rs  bench_operator_study.rs
deep_causality_cfd/reverted/: README.md
deep_causality_cfd/src/: lib.rs
deep_causality_cfd/studies/: README.md
deep_causality_cfd/tests/: BUILD.bazel  mod.rs
deep_causality_cfd/verification/: README.md
deep_causality_core/: BUILD.bazel  CHANGELOG.md  Cargo.toml  LEAN_CORE.md  Notes.md  README.md  deep_causality_core_sbom.spdx.json  deep_causality_core_sbom.spdx.json.sha  examples.txt
deep_causality_core/examples/: control_flow_builder.rs  control_flow_strict_zst.rs  propagating_effect.rs  propagating_process.rs
deep_causality_core/src/: lib.rs
deep_causality_core/tests/: mod.rs  (+2 more)
deep_causality_data_structures/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  README_ArrayGrid.md  README_CausalTensor.md  README_SlidingWindow.md  deep_causality_data_structures_sbom.spdx.json  deep_causality_data_structures_sbom.spdx.json.sha  sbom.spdx  sbom.spdx.json  sbom.spdx.json.sha
deep_causality_discovery/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_discovery_sbom.spdx.json  deep_causality_discovery_sbom.spdx.json.sha  sbom.spdx.json  sbom.spdx.json.sha
deep_causality_effects/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_effects_sbom.spdx.json  deep_causality_effects_sbom.spdx.json.sha
deep_causality_ethos/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_ethos_sbom.spdx.json  deep_causality_ethos_sbom.spdx.json.sha  examples.txt
deep_causality_fft/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_fft_sbom.spdx.json  deep_causality_fft_sbom.spdx.json.sha
deep_causality_file/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  deep_causality_file_sbom.spdx.json  deep_causality_file_sbom.spdx.json.sha
(+8723 files in other folders)
