# SPDX-License-Identifier: MIT
# Copyright (c) "2025" . The DeepCausality Authors and Contributors. All Rights Reserved.

[workspace]
resolver = "2"
members = [
    "deep_causality",
    "deep_causality_algorithms",
    "deep_causality_ast",
    "deep_causality_core",
    "deep_causality_data_structures",
    "deep_causality_discovery",
    "deep_causality_ethos",
    "deep_causality_effects",
    "deep_causality_haft",
    "deep_causality_macros",
    "deep_causality_multivector",
    "deep_causality_num",
    "deep_causality_rand",
    "deep_causality_physics",
    "deep_causality_sparse",
    "deep_causality_tensor",
    "deep_causality_topology",
    "deep_causality_uncertain",
    "ultragraph",
    # Examples
    "examples/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
license = "MIT"

[workspace.dependencies]
# Empty

# Optimize all crates
[profile.release]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary to reduce size
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
