[package]
name = "dcl_data_structures"
version = "0.8.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
license = "MIT"
description = "Data structures for for deep_causality crate."
documentation = "https://docs.rs/deep_causality"
categories = ["data-structures", "science"]
keywords = ["data-structures", "sliding-window", "grid-array", "ringbuffer", "disruptor"]

[[example]]
name = "array_grid"
path = "examples/array_grid/array_grid.rs"

[[example]]
name = "window_type_array_storage"
path = "examples/window_type/array_storage.rs"

#[[example]]
#name = "window_type_unsafe_array_storage"
#path = "examples/window_type/unsafe_array_storage.rs"

[[example]]
name = "window_type_vector_storage"
path = "examples/window_type/vector_storage.rs"

#[[example]]
#name = "window_type_unsafe_vector_storage"
#path = "examples/window_type/unsafe_vector_storage.rs"

[[example]]
name = "ring_buffer_single_producer_single_consumer"
path = "examples/ring_buffer/ring_buffer_single_producer_single_consumer.rs"

[[example]]
name = "ring_buffer_single_producer_multi_consumer"
path = "examples/ring_buffer/ring_buffer_single_producer_multi_consumer.rs"

[[example]]
name = "ring_buffer_multi_producer_single_consumer"
path = "examples/ring_buffer/ring_buffer_multi_producer_single_consumer.rs"

[[example]]
name = "ring_buffer_multi_producer_multi_consumer"
path = "examples/ring_buffer/ring_buffer_multi_producer_multi_consumer.rs"

[features]
default = []
unsafe = [] # Enable unsafe implementations

[dev-dependencies]
crossbeam-utils = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.9", features = ["small_rng"] }

[[bench]]
name = "bench_dcl_data_structures"
harness = false
