# SPDX-License-Identifier: MIT
# Copyright (c) "2025" . The DeepCausality Authors and Contributors. All Rights Reserved.

[package]
name = "dcl_data_structures"
version = "0.9.2"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
license = "MIT"
description = "Data structures for for deep_causality crate."
documentation = "https://docs.rs/deep_causality"
categories = ["data-structures", "science"]
keywords = ["data-structures", "sliding-window", "grid-array"]
# Exclude all bazel files as these conflict with Bazel workspace when vendored.
exclude = ["*.bazel", "*/*.bazel",  "*.bazel.*", "BUILD", "BUILD.bazel", "MODULE.bazel", ".bazelignore",".bazelrc", "tests/**/*"]
