[package]
name = "dcl_hyper_graph"
version = "0.4.4"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
license = "MIT"
description = "Hypergraph data structure for for deep_causality crate."
documentation = "https://docs.rs/deep_causality"
categories = ["data-structures"]
keywords = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
petgraph = "0.6.3"


#[dev-dependencies]
#criterion = { version = "0.5", features = ["html_reports"] }
#rand = { version = "0.8", features = ["small_rng"] }
#
#
#[[bench]]
#name = "bench_main"
#harness = false