load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "deep_causality",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    proc_macro_deps = [
        # Crate to test
        "//alias:deep_causality_macros",
    ],
    tags = [
        "data_structures",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//alias:dcl_data_structures",
        "//alias:ultragraph",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
