load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "deep_causality",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "data_structures",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//deep_causality_algorithms",
        "//deep_causality_data_structures",
        "//deep_causality_haft",
        "//deep_causality_num",
        "//deep_causality_tensor",
        "//deep_causality_uncertain",
        "//ultragraph",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
