[package]
name = "deep_causality"
version = "0.8.2"
edition = "2021"
rust-version = "1.80"
readme = "../README.md"
license = "MIT"

description = "Computational causality library. Provides causality graph, collections, context and causal reasoning."
documentation = "https://docs.rs/deep_causality"
homepage = "https://deepcausality.com/about/"
repository = "https://github.com/deepcausality/deep_causality.rs"
keywords = ["causality", "causal-graph", "causal-reasoning", "graph"]
categories = ["data-structures", "science", "aerospace", "finance", "mathematics"]
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
exclude = ["*.bazel", "*/*.bazel",  "*.bazel.*", "BUILD", "BUILD.bazel", "MODULE.bazel", ".bazelignore",".bazelrc", "tests/**/*"]


[dependencies.dcl_data_structures]
path = "../dcl_data_structures"
version = "0.9"


[dependencies.deep_causality_macros]
path = "../deep_causality_macros"
version = "0.8.0"


[dependencies.ultragraph]
path = "../ultragraph"
version = "0.8.2"


[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }


[[bench]]
name = "bench_main"
harness = false
