# SPDX-License-Identifier: MIT
# Copyright (c) "2025" . The DeepCausality Authors and Contributors. All Rights Reserved.

[package]
name = "deep_causality"
version = "0.12.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "../README.md"

description = "Computational causality library. Provides causality graph, collections, context and causal reasoning."
documentation = "https://docs.rs/deep_causality"
homepage = "https://deepcausality.com/about/"
repository = "https://github.com/deepcausality/deep_causality.rs"
keywords = ["causality", "causal-graph", "causal-reasoning", "graph"]
categories = ["data-structures", "science", "aerospace", "finance", "mathematics"]
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
exclude = ["*.bazel", "*/*.bazel",  "*.bazel.*", "BUILD", "BUILD.bazel", "MODULE.bazel", ".bazelignore",".bazelrc", "tests/**/*"]


[features]
# Enables random number generator from the host OS for secure random numbers.
# Enabling os-random adds an indirect depdency on getrandom and libc.
# Disabled by default to use native Rust prng instead.
os-random = ["deep_causality_uncertain/os-random"]


[dependencies.deep_causality_uncertain]
path = "../deep_causality_uncertain"
version = "0.3"


[dependencies.deep_causality_data_structures]
path = "../deep_causality_data_structures"
version = "0.10"


[dependencies.deep_causality_tensor]
path = "../deep_causality_tensor"
version = "0.2"

[dependencies.deep_causality_num]
path = "../deep_causality_num"
version = "0.1"


[dependencies.ultragraph]
path = "../ultragraph"
version = "0.8"


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }


[[bench]]
name = "bench_main"
harness = false
