load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "deep_causality_algebra",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "algebra",
        "math",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//deep_causality_num",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality_algebra",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality_algebra",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
