[package]
name = "deep_causality_algebra"
version = "0.2.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
description = "Abstract algebra traits (groups, rings, fields, algebras) and isomorphism markers for deep_causality."
documentation = "https://docs.rs/deep_causality_algebra"
categories = ["development-tools", "mathematics"]
keywords = ["algebra", "traits", "ring", "field"]
# Exclude all bazel files as these conflict with Bazel workspace when vendored.
exclude = [
    "*.bazel",
    "*/*.bazel",
    "*.bazel.*",
    "BUILD",
    "BUILD.bazel",
    "MODULE.bazel",
    ".bazelignore",
    ".bazelrc",
    "tests/**/*",
    "papers/*",
]

[features]
default = ["std"]
std = ["deep_causality_num/std"]
no-std = ["deep_causality_num/no-std"]

[dependencies.deep_causality_num]
path = "../deep_causality_num"
version = "0.4"
default-features = false

[lints]
workspace = true
